Refactory paimon trino module, use `TrinoFileSystem` as the only file system. (#54)